# LFA

./: .gitignore  CMakeLists.txt  L_NFA.cpp  L_NFA.h  file_testing.cpp  file_testing.h  input.txt  interactive_testing.cpp  interactive_testing.h  main.cpp
